tests/parse_print/parsing03_nonassoc/stderr.expected
Error:
    tests/parse_print/parsing03_nonassoc/nonassoc.essence:2:16:
  |
2 | such that x = y = z
  |                ^
Missing Expr

tests/parse_print/parsing03_nonassoc/nonassoc.essence:2:17:
  |
2 | such that x = y = z
  |                 ^
Missing ,
